--- a/InfoPointUI/App.xaml
+++ b/InfoPointUI/App.xaml
@@ -149,7 +149,7 @@
                 <Setter Property="Margin" Value="0,0,10,0"/>
                 <Setter Property="FontSize" Value="16"/>
                 <Setter Property="FontWeight" Value="SemiBold"/>
-                <Setter Property="FontFamily" Value="Segoe UI"/>
+                <Setter Property="FontFamily" Value="{StaticResource BahnschriftFont}"/>
                 <Setter Property="BorderThickness" Value="2"/>
                 <Setter Property="BorderBrush" Value="{StaticResource PharmacyGreen}"/>
                 <Setter Property="Background" Value="White"/>
