--- a/InfoPointUI/Views/MainWindow.xaml
+++ b/InfoPointUI/Views/MainWindow.xaml
@@ -5,21 +5,16 @@
         xmlns:controls="clr-namespace:InfoPointUI.Controls"
         xmlns:converters="clr-namespace:InfoPointUI.Converters"
         Title="DrMax Tablet UI"
-        WindowState="Maximized"
-        WindowStyle="None"
         ResizeMode="NoResize"
         FontFamily="{StaticResource BahnschriftFont}"
         Background="White"
+        Width="1920" Height="1080"
         Loaded="Window_Loaded">
 
     <Window.Resources>
         <converters:CategoryStyleSelector x:Key="CategoryStyleSelector" />
         <converters:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
-
-    <Window.DataContext>
-        <viewModels:MainViewModel />
-    </Window.DataContext>
 
     <Grid x:Name="MainGrid" 
           Margin="20"
@@ -31,7 +26,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Button x:Name="DebugCloseButton"
+        <Button x:Name="btnClose"
                 Content="X" 
                 Width="40" Height="40" 
                 HorizontalAlignment="Right" VerticalAlignment="Top"
@@ -39,17 +34,15 @@
                 Background="#FF4444" Foreground="White" 
                 FontWeight="Bold" FontSize="16"
                 Click="DebugCloseButton_Click"
-                Visibility="{Binding IsDebugMode, Source={x:Static Application.Current}, Converter={StaticResource BoolToVisibilityConverter}}"
                 ToolTip="Close application (Debug mode only)"/>
-        <Button x:Name="TestStandbyButton"
-        Content="TEST Standby" 
-        Width="120" Height="40" 
-        HorizontalAlignment="Right" VerticalAlignment="Top"
-        Margin="10,100,10,10" 
-        Background="Blue" Foreground="White" 
-        FontWeight="Bold" FontSize="12"
-        Click="TestStandbyButton_Click"
-        Visibility="{Binding IsDebugMode, Source={x:Static Application.Current}, Converter={StaticResource BoolToVisibilityConverter}}"
+        <Button x:Name="btnStandbyButton"
+                Content="TEST Standby" 
+                Width="120" Height="40" 
+                HorizontalAlignment="Right" VerticalAlignment="Top"
+                Margin="10,100,10,10" 
+                Background="Blue" Foreground="White" 
+                FontWeight="Bold" FontSize="12"
+                Click="TestStandbyButton_Click"
         ToolTip="Test standby functionality"/>
 
         <!-- 🔝 Header -->
@@ -115,7 +108,7 @@
                            VerticalAlignment="Center"
                            Visibility="{Binding Text, ElementName=txtCardNumber, Converter={StaticResource StringToVisibilityConverter}}"/>
                 <TextBlock x:Name="txtCardNumber" 
-                           Text="{Binding LoyaltyCardCode, Source={x:Static Application.Current}}" 
+                           Text="{Binding CardNumber}" 
                            FontSize="20" FontFamily="Bahnschrift"
                            HorizontalAlignment="Left" 
                            VerticalAlignment="Center"/>
