--- a/InfoPointUI/App.xaml
+++ b/InfoPointUI/App.xaml
@@ -2,11 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:converters="clr-namespace:InfoPointUI.Converters"
+             xmlns:controls="clr-namespace:InfoPointUI.Controls"
              ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/ImageUris.xaml" />
+                <ResourceDictionary Source="Themes/Generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
 
@@ -98,8 +100,8 @@
                             <!-- Conținutul -->
                             <Grid>
                                 <!-- Icon -->
-                                <TextBlock Text="🔍"
-                                   FontSize="16"
+                                <TextBlock Text="🔎"
+                                   FontSize="18"
                                    Foreground="#7A7A7A"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Right"
@@ -143,9 +145,9 @@
         </Style>
 
         <!-- 🟩 Butoane categorie -->
-            <Style x:Key="CategoryButtonStyle" TargetType="Button">
-                <Setter Property="Width" Value="135"/>
-                <Setter Property="Height" Value="44"/>
+            <Style x:Key="CategoryButtonStyle" TargetType="controls:TouchButton">
+                <Setter Property="Width" Value="145"/>
+                <Setter Property="Height" Value="48"/>
                 <Setter Property="Margin" Value="0,0,10,0"/>
                 <Setter Property="FontSize" Value="16"/>
                 <Setter Property="FontWeight" Value="SemiBold"/>
@@ -156,7 +158,7 @@
                 <Setter Property="Foreground" Value="{StaticResource PharmacyGreen}"/>
                 <Setter Property="Template">
                     <Setter.Value>
-                        <ControlTemplate TargetType="Button">
+                        <ControlTemplate TargetType="controls:TouchButton">
                             <Border x:Name="border"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
@@ -199,10 +201,14 @@
 
             <!-- 🔴 Buton categorie selectată -->
         <Style x:Key="CategoryButtonSelectedStyle"
-               BasedOn="{StaticResource CategoryButtonStyle}" TargetType="Button">
+               BasedOn="{StaticResource CategoryButtonStyle}" TargetType="controls:TouchButton">
             <Setter Property="Background" Value="{StaticResource DrMaxRed}"/>
             <Setter Property="Foreground" Value="White"/>
         </Style>
+
+        <Style x:Key="TouchCategoryButtonStyle" 
+           TargetType="controls:TouchButton" 
+           BasedOn="{StaticResource CategoryButtonStyle}"/>
 
         </ResourceDictionary>
     </Application.Resources>
