--- a/InfoPointUI/Views/MainWindow.xaml
+++ b/InfoPointUI/Views/MainWindow.xaml
@@ -1,215 +1,130 @@
-﻿<Window x:Class="InfoPointUI.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:viewModels="clr-namespace:InfoPointUI.ViewModels"
-        xmlns:controls="clr-namespace:InfoPointUI.Controls"
-        xmlns:converters="clr-namespace:InfoPointUI.Converters"
-        Title="DrMax Tablet UI"
-        ResizeMode="NoResize"
-        FontFamily="{StaticResource BahnschriftFont}"
-        Background="White"
-        Width="1920" Height="1080"
+﻿<Window x:Class="InfoPointUI.Views.MainWindow" 
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+        xmlns:viewModels="clr-namespace:InfoPointUI.ViewModels" 
+        xmlns:controls="clr-namespace:InfoPointUI.Controls" 
+        xmlns:converters="clr-namespace:InfoPointUI.Converters" 
+        Title="DrMax Tablet UI" 
+        ResizeMode="NoResize" 
+        FontFamily="{StaticResource BahnschriftFont}" 
+        Background="White" 
+        Width="1920" 
+        Height="1080" 
         Loaded="Window_Loaded">
-
     <Window.Resources>
-        <converters:CategoryStyleSelector x:Key="CategoryStyleSelector" />
+        <converters:CategoryStyleSelector x:Key="CategoryStyleSelector"/>
         <converters:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
-
-    <Grid x:Name="MainGrid" 
-          Margin="20"
-          IsManipulationEnabled="True"
-          Background="Transparent">
+    <Grid x:Name="MainGrid" Margin="20" IsManipulationEnabled="True" TouchDown="MainGrid_TouchDown" Background="Transparent">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <Button x:Name="btnClose"
-                Content="X" 
-                Width="40" Height="40" 
-                HorizontalAlignment="Right" VerticalAlignment="Top"
-                Margin="10, 55" 
-                Background="#FF4444" Foreground="White" 
-                FontWeight="Bold" FontSize="16"
-                Click="DebugCloseButton_Click"
-                ToolTip="Close application (Debug mode only)"/>
-        <Button x:Name="btnStandbyButton"
-                Content="TEST Standby" 
-                Width="120" Height="40" 
-                HorizontalAlignment="Right" VerticalAlignment="Top"
-                Margin="10,100,10,10" 
-                Background="Blue" Foreground="White" 
-                FontWeight="Bold" FontSize="12"
-                Click="TestStandbyButton_Click"
-        ToolTip="Test standby functionality"/>
-
+        <controls:TouchButton x:Name="btnStandbyButton" Content="TEST Standby" Width="120" Height="40" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="-210,40,10,10" Background="Blue" Foreground="White" FontWeight="Bold" FontSize="12" Click="TestStandbyButton_Click" ToolTip="Test standby functionality"/>
         <!-- 🔝 Header -->
         <Grid Grid.Row="0" Margin="0,0,0,20">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-
             <!-- 🖼️ Logo -->
-            <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Dr.Max_logo.svg/330px-Dr.Max_logo.svg.png"
-                   Height="64"
-                   VerticalAlignment="Center"
-                   RenderOptions.BitmapScalingMode="HighQuality"
-                   Margin="0,0,20,0" />
-
-            <!-- 🔍 Search și categorii -->
+            <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Dr.Max_logo.svg/330px-Dr.Max_logo.svg.png" Height="64" VerticalAlignment="Center" RenderOptions.BitmapScalingMode="HighQuality" Margin="0,0,20,0"/>
+            <!-- 🔍 Search și info card scanat -->
             <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
-                <TextBox x:Name="SearchTextBox"
-                         Style="{StaticResource SearchBoxStyle}"
-                         Height="48"
-                         Width="460"
-                         Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}"
-                         Tag="Căutare după nume produs, brand sau categorie..." />
-
-                <Button Content="Toate categoriile"
-                        Margin="20,0,10,0"
-                        Command="{Binding SelectCategoryCommand}"
-                        CommandParameter=""
-                        Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}}" />
-
-                <Button Content="Cosmetice"
-                        Command="{Binding SelectCategoryCommand}"
-                        CommandParameter="Cosmetice"
-                        Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Cosmetice}" />
-
-                <Button Content="Durere"
-                        Command="{Binding SelectCategoryCommand}"
-                        CommandParameter="Durere"
-                        Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Durere}" />
-
-                <Button Content="Proteze"
-                        Command="{Binding SelectCategoryCommand}"
-                        CommandParameter="Proteze"
-                        Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Proteze}" />
-
+                <TextBox x:Name="SearchTextBox" Style="{StaticResource SearchBoxStyle}" Height="56" Width="500" Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}" MouseDown="SearchTextBox_MouseDown" TouchDown="SearchTextBox_TouchDown" Tag="Căutare după nume produs, brand sau categorie..."/>
+                <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.ColumnSpan="2" Margin="10, 5">
+                    <TextBlock Text="Card de fidelitate: " FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding Text, ElementName=txtCardNumber, Converter={StaticResource StringToVisibilityConverter}}"/>
+                    <TextBlock x:Name="txtCardNumber" Text="{Binding CardNumber}" FontSize="20" FontFamily="Bahnschrift" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                </StackPanel>
             </StackPanel>
-            <Button Content="Scaneaza card" Grid.Column="1"
-                        HorizontalAlignment="Right"
-                        Style="{StaticResource CategoryButtonStyle}" 
-                        Click="OnScanCard"
-                        TouchDown="OnScanCardTouched"
-                    />
-            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2" Margin="10, 5">
-                <TextBlock
-                           Text="Card de fidelitate: " 
-                           FontSize="16" 
-                           FontFamily="Bahnschrift"
-                           HorizontalAlignment="Left" 
-                           VerticalAlignment="Center"
-                           Visibility="{Binding Text, ElementName=txtCardNumber, Converter={StaticResource StringToVisibilityConverter}}"/>
-                <TextBlock x:Name="txtCardNumber" 
-                           Text="{Binding CardNumber}" 
-                           FontSize="20" FontFamily="Bahnschrift"
-                           HorizontalAlignment="Left" 
-                           VerticalAlignment="Center"/>
+            <controls:TouchButton Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ShadowTouchButton}" Click="OnScanCard">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <Image Source="/Assets/Images/card_drmax.jpg" Height="64" VerticalAlignment="Center" RenderOptions.BitmapScalingMode="HighQuality" Margin="0,0,20,0"/>
+                    <TextBlock Text="Scanează cardul" FontSize="16" FontWeight="Bold" Foreground="White" VerticalAlignment="Center"/>
+                </StackPanel>
+            </controls:TouchButton>
+            
+            <!-- 🧃 Categorii -->
+            <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="10, 10, -10, 0" Height="64" VerticalAlignment="Stretch" Background="{StaticResource PharmacyGreen}">
+                <controls:TouchButton Content="Toate categoriile" Margin="5" Command="{Binding SelectCategoryCommand}" CommandParameter="" Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <controls:TouchButton Content="Cosmetice" Margin="5" Command="{Binding SelectCategoryCommand}" CommandParameter="Cosmetice" Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Cosmetice, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <controls:TouchButton Content="Durere" Margin="5" Command="{Binding SelectCategoryCommand}" CommandParameter="Durere" Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Durere, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <controls:TouchButton Content="Proteze" Margin="5" Command="{Binding SelectCategoryCommand}" CommandParameter="Proteze" Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Proteze, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <controls:TouchButton Content="Altă categorie" Margin="10,5,5,5" Command="{Binding SelectCategoryCommand}" CommandParameter="Altele" Style="{Binding SelectedCategory, Converter={StaticResource CategoryStyleSelector}, ConverterParameter=Altele, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
-
         </Grid>
-        
         <!-- 🧃 Produse + navigare -->
-        <Grid Grid.Row="1">
+        <Grid x:Name="grdItems" Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="80" />
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="80"/>
             </Grid.ColumnDefinitions>
-
+            
             <!-- ◀️ Navigare stânga -->
-            <Border Grid.Column="0" Background="#20FFFFFF" Cursor="Hand">
+            <Border Grid.Column="0" Background="#1000FF00" Cursor="Hand" TouchDown="PreviousPageTouchDown">
                 <Border.InputBindings>
-                    <MouseBinding Gesture="LeftClick" Command="{Binding PreviousPageCommand}" />
+                    <MouseBinding Gesture="LeftClick" Command="{Binding PreviousPageCommand}"/>
                 </Border.InputBindings>
-                <TextBlock Text="◀️" FontSize="32" Foreground="{StaticResource PharmacyGreen}"
-                           VerticalAlignment="Center" HorizontalAlignment="Center" />
+                <TextBlock Text="◀️" FontSize="32" Foreground="{StaticResource PharmacyGreen}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <Border.Style>
                     <Style TargetType="Border">
-                        <Setter Property="Visibility" Value="Visible" />
+                        <Setter Property="Visibility" Value="Visible"/>
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding DisplayPage}" Value="1">
-                                <Setter Property="Visibility" Value="Hidden" />
+                                <Setter Property="Visibility" Value="Hidden"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Border.Style>
             </Border>
-
+            
             <!-- 🧃 Tile-uri produse -->
-            <ListBox x:Name="ProductItemsControl"
-                     Grid.Column="1"
-                     ItemsSource="{Binding Products}"
-                     Background="Transparent"
-                     BorderThickness="0"
-                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                     ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                     SelectionMode="Single">
+            <ListBox x:Name="ProductItemsControl" Grid.Column="1" ItemsSource="{Binding Products}" Background="Transparent" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionMode="Single">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel IsItemsHost="True" Orientation="Horizontal"/>
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
-
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <controls:ProductTile Product="{Binding}" />
+                        <controls:ProductTile Product="{Binding}"/>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
 
-            <!--<Grid Grid.Column="1" Background="#F5F5F5">-->
-                <!--<controls:DrMaxCard Grid.Column="1" Grid.Row="0"  HorizontalAlignment="Right" VerticalAlignment="Top"
-                            CardText=""
-                            CenterTextSize="22"
-                                    Height="150" Width="310"
-                                    Margin="0,-100, 10, 0"
-                            BarcodeValue="SCANEAZA CARD       "/>-->
-
             <!-- ▶️ Navigare dreapta -->
-            <Border Grid.Column="2" Background="#20FFFFFF" Cursor="Hand">
+            <Border Grid.Column="2" Background="#1000FF00" Cursor="Hand" TouchDown="NextPageTouchDown">
                 <Border.InputBindings>
-                    <MouseBinding Gesture="LeftClick" Command="{Binding NextPageCommand}" />
+                    <MouseBinding Gesture="LeftClick" Command="{Binding NextPageCommand}"/>
                 </Border.InputBindings>
-                <TextBlock Text="▶️" FontSize="32" Foreground="{StaticResource PharmacyGreen}"
-                           VerticalAlignment="Center" HorizontalAlignment="Center" />
+                <TextBlock Text="▶️" FontSize="32" Foreground="{StaticResource PharmacyGreen}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <Border.Style>
                     <Style TargetType="Border">
-                        <Setter Property="Visibility" Value="Visible" />
+                        <Setter Property="Visibility" Value="Visible"/>
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsLastPage}" Value="True">
-                                <Setter Property="Visibility" Value="Hidden" />
+                                <Setter Property="Visibility" Value="Hidden"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Border.Style>
             </Border>
         </Grid>
-
+        
         <!-- 💚 Bara paginare -->
-        <Border Grid.Row="2"
-                Background="{StaticResource PharmacyGreen}"
-                Height="40"
-                CornerRadius="5"
-                Margin="0,10,0,0">
-            <TextBlock FontSize="18"
-                       Foreground="White"
-                       FontFamily="Bahnschrift SemiBold"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center">
+        <Border Grid.Row="2" Background="{StaticResource PharmacyGreen}" Height="40" CornerRadius="5" Margin="0,10,0,0">
+            <TextBlock FontSize="18" Foreground="White" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock.Text>
                     <MultiBinding Converter="{StaticResource BottomBarTextConverter}">
-                        <Binding Path="Products.Count" />
-                        <Binding Path="DisplayPage" />
-                        <Binding Path="TotalPages" />
+                        <Binding Path="Products.Count"/>
+                        <Binding Path="DisplayPage"/>
+                        <Binding Path="TotalPages"/>
                     </MultiBinding>
                 </TextBlock.Text>
             </TextBlock>
