--- a/InfoPointUI/Views/ProductDetails/ProductLocationPage.xaml
+++ b/InfoPointUI/Views/ProductDetails/ProductLocationPage.xaml
@@ -1,15 +1,16 @@
 ﻿<Page x:Class="InfoPointUI.Views.ProductDetails.ProductLocationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="clr-namespace:InfoPointUI.Controls"
       Title="ProductLocationPage">
 
     <Page.Resources>
         <!-- Stil pentru butoane rotunjite cu font mai mare -->
-        <Style TargetType="Button" x:Key="RoundedButtonLargeFont">
+        <Style TargetType="controls:TouchButton" x:Key="RoundedButtonLargeFont">
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="Button">
+                    <ControlTemplate TargetType="controls:TouchButton">
                         <Border Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
@@ -38,13 +39,13 @@
 
         <!-- Rândul 1 -->
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,10">
-            <Button  Command="{Binding NavigateToDetailsCommand}" Content="Înapoi" Width="88" Height="40" Margin="0,0,12,0" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
-            <Button Content="Home" Tag="CloseWindow" Width="88" Height="40" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
+            <controls:TouchButton  Command="{Binding NavigateToDetailsCommand}" Content="Înapoi" Width="88" Height="48" Margin="0,0,12,0" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
+            <controls:TouchButton Content="Home" Tag="CloseWindow" Width="88" Height="48" Background="White" Style="{StaticResource RoundedButtonLargeFont}"/>
         </StackPanel>
 
         <Image Grid.Row="0" Grid.Column="1" Source="/Assets/Images/drmax_logo.png" 
                RenderOptions.BitmapScalingMode="HighQuality"
-               Height="42" 
+               Height="48" 
                HorizontalAlignment="Right"
                VerticalAlignment="Center"
                Margin="0,-10,30,0"/>
@@ -54,7 +55,13 @@
             Grid.Column="0"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Center" VerticalAlignment="Center" >
-            <TextBlock x:Name="ProductNameText" Text="{Binding Product.Location}" FontSize="22" FontWeight="Bold"/>
+            <TextBlock x:Name="ProductLocationText" Text="{Binding Product.Location}" FontSize="22" FontWeight="Bold"/>
+            <Image Grid.Row="0" Grid.Column="1" Source="/Assets/Images/sample_map.png" 
+               RenderOptions.BitmapScalingMode="HighQuality"
+               Height="450" 
+               HorizontalAlignment="Right"
+               VerticalAlignment="Center"
+               Margin="0,20,20,10"/>
         </StackPanel>
     </Grid>
 </Page>
