--- a/InfoPointUI/Views/Standby/StandbyWindow.xaml
+++ b/InfoPointUI/Views/Standby/StandbyWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStyle="None" WindowState="Maximized" 
         Background="{StaticResource PharmacyGreen}" 
+        Cursor="None"
         Topmost="True" ShowInTaskbar="False">
 
     <Window.Resources>
@@ -56,6 +57,6 @@
             
         </StackPanel>
 
-        <Border Background="Transparent" Cursor="Hand"/>
+        <Border Background="Transparent"/>
     </Grid>
 </Window>
